<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">What 2 Watch</string>
    <string name="action_settings">Settings</string>
    
    <string name="welcome_text">[Press to enter]</string>
    
    <string name="accueil_textAccueil">What do you want to do ?</string>
	<string name="accueil_button_browse">Browse</string>
	<string name="accueil_button_search">Search</string>
	<string name="accueil_button_discover">Discover</string>
	<string name="accueil_button_stats">Stats</string>
	<string name="accueil_button_parameter_user">User Parameters</string>
	<string name="accueil_button_disconnect">Disconnect</string>
	
	<string name="browse_textBrowse">What do you want to browse today?</string>
	<string name="browse_general">General</string>
	<string name="browse_genre">Genre</string>
	<string name="browse_button_title">Title</string>
	<string name="browse_button_duration">Duration</string>
	<string name="browse_button_actor">Actor</string>
	<string name="browse_button_director">Director</string>
	<string name="browse_button_action">Action</string>
	<string name="browse_button_adventure">Adventure</string>
	<string name="browse_button_animation">Animation</string>
	<string name="browse_button_comedy">Comedy</string>
	<string name="browse_button_crime">Crime</string>
	<string name="browse_button_drama">Drama</string>
	<string name="browse_button_family">Family</string>
	<string name="browse_button_horror">Horror</string>
	<string name="browse_button_musical">Musical</string>
	<string name="browse_button_romance">Romance</string>
	<string name="browse_button_scifi">Sci-fi</string>
	<string name="browse_button_thriller">Thriller</string>
	
	<string name="cinema_cinema">Cinema: options</string>
	<string name="cinema_button_all_cinemas">All cinemas</string>
	<string name="cinema_button_coming_soon">Coming soon</string>
	<string name="cinema_button_closest_cinema">Closest cinema</string>
	
	<string name="search_by_hint">Title, Genre, Director or Actor</string>
	<string name="search_by_radio_title">Title</string>
	<string name="search_by_radio_genre">Genre</string>
	<string name="search_by_radio_director">Director</string>
	<string name="search_by_radio_actor">Actor</string>
	<string name="search_by_button_search">Search !</string>
	<string name="search_by_text">Search</string>

	<string name="user_stat_text">Statistic</string>
	<string name="user_stat_username">UserName</string>
	<string name="user_stat_nbrFilmT">Number of films viewed : </string>
	<string name="user_stat_nbrFilmV">15</string>
	<string name="user_stat_nbrHourT">Number of hours spend : </string>
	<string name="user_stat_nbrHourV">1000</string>
	<string name="user_stat_nbrRateT">Number of films rated : </string>
	<string name="user_stat_nbrRateV">12</string>
	<string name="user_stat_MostDirT">Most Viewed director : </string>
	<string name="user_stat_MostDirV">Alain</string>
	<string name="user_stat_MostGenrT">Most viewed genre : </string>
	<string name="user_stat_MostGenrV">Action</string>
	<string name="user_stat_MostActT">Most viewed actor : </string>
	<string name="user_stat_MostActV">Bernadette</string>
	<string name="user_stat_LevelT">Level :</string>
	<string name="user_stat_LevelV">2</string>
	<string name="user_stat_badge_P">Badge Pirate</string>
	<string name="user_stat_badge_S">Badge Star Wars</string>
	<string name="user_stat_badge_L">Badge The Lord of the Rings</string>
	<string name="user_stat_badge_D">Badge Disney</string>
	
	<string name="channel_Text">Channel</string>
	<string name="channel_button_coming_soon">Cinema</string>
	<string name="channel_button_cinema">Coming soon</string>
	
	<string name="create_user_createuser"> <b><i>Create Your Profil!</i></b> </string>
	<string name="create_user_name"> <b><i>Name :</i></b> </string>
	<string name="create_user_entername"> <b><i>Enter your name</i></b> </string>
	<string name="create_user_firstname"> <b><i>Firstname :</i></b> </string>
	<string name="create_user_enterfirstname"> <b><i>Enter your firstname</i></b> </string>
	<string name="create_user_age"> <b><i>Age :</i></b> </string>
	<string name="create_user_enterage"> <b><i>Enter your age</i></b> </string>
	<string name="create_user_password"> <b><i>Password  :</i></b> </string>
	<string name="create_user_enterpassword"> <b><i>Choose a password</i></b> </string>
	<string name="create_user_confirmation"> <b><i>Confirmation  :</i></b> </string>
	<string name="create_user_enterconfirmation"> <b><i>Type your password again</i></b> </string>
	<string name="create_user_recovery"> <b><i>Select a recovery question : </i></b> </string>
   	<string name="create_user_create"> <b><i>Create!</i></b> </string>
   	
   	<string name="choose_user_account">Select your account!</string>
   	<string name="choose_user_welcome">Welcome!</string>
	<string name="choose_user_connect">Let\'s go!</string>
	<string name="choose_user_create">Create a new user</string>
	<string name = "choose_user_password">enter your password</string>
	
	<string name="movie_seetrailer">See Trailer</string>
	<string name = "movie_findchannel">Find channel</string>
	<string name = "movie_findcinema">Find cinema</string>
	<string name = "movie_text_title">Year :  </string>
	<string name = "movie_text_duration">Duration :  </string>
	<string name = "movie_text_director">Director :   </string>
	<string name = "movie_text_actors">Actors :   </string>
	<string name = "movie_already_watched">Already watched</string>
	<string name = "movie_watched_once_more">Once more</string>
	
	
</resources>
