<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/wallpaper"
    android:padding="8dp">
    
    <TextView
    	android:id="@+id/search_by_Text" 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="26sp"
        android:textStyle="bold"
        android:textColor="#FFFFFF"
        android:text="@string/search_by_text" />
  
    <EditText 
        android:id="@+id/search_by_EditText1"
        android:layout_below="@id/search_by_Text"
        android:layout_marginTop="5dp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textColor="#FFFFFF"
        android:hint="@string/search_by_hint"/>
    
    <RadioGroup 
        android:id="@+id/search_by_RadioG1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/search_by_EditText1"
        android:orientation="vertical"
        android:layout_marginTop="20dp">
         
	        <RadioButton
		       android:id="@+id/search_by_Title"
		       android:layout_width="wrap_content"
			   android:layout_height="wrap_content"
			   android:text="@string/search_by_radio_title"
		       android:textColor="#FFFFFF" 
		       android:checked="true"/>        
	        <RadioButton
		       android:id="@+id/search_by_Genre"
		       android:layout_width="wrap_content"
			   android:layout_height="wrap_content"
			   android:textColor="#FFFFFF" 
		       android:text="@string/search_by_radio_genre"/>        
	        <RadioButton
		       android:id="@+id/search_by_Acteur"
		       android:layout_width="wrap_content"
			   android:layout_height="wrap_content"
			   android:textColor="#FFFFFF" 
		       android:text="@string/search_by_radio_director"/>
	        <RadioButton
	            android:id="@+id/search_by_Director"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/search_by_radio_actor"
	            android:textColor="#FFFFFF" />   		
    </RadioGroup>
   
    <Button 
        android:id="@+id/search_by_Bouton"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/search_by_RadioG1"
        android:layout_marginTop="15dp"
        style="@style/boutonWrap"
        android:text="@string/search_by_button_search"/>
    
</RelativeLayout>