   <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:id="@+id/layoutAccueil" 
        android:layout_width="fill_parent" 
        android:layout_height="fill_parent"
        android:padding="8dp"
        style="@style/wallpaper">        

		<TextView
		    	android:id="@+id/accueil_textAccueil" 
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:textSize="26sp"
		        android:textStyle="bold"
		        android:textColor="#FFFFFF"
		        android:text="@string/accueil_textAccueil" />
	    
		<RelativeLayout 
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_centerVertical="true"
		    android:layout_centerHorizontal="true">
	    
		    <Button 
		        	style="@style/boutonNormal"
		            android:id="@+id/accueil_button_browse" 
		            android:layout_centerHorizontal="true" 
		            android:text="@string/accueil_button_browse"/>
		    <Button 
		        	style="@style/boutonNormal"
		            android:id="@+id/accueil_button_search"  
		            android:layout_below="@+id/accueil_button_browse" 
		            android:layout_centerHorizontal="true" 
		            android:layout_marginTop="5dp"
		            android:text="@string/accueil_button_search"/>
		    <Button 
		            style="@style/boutonNormal"
		            android:id="@+id/accueil_button_discover" 
		            android:layout_below="@+id/accueil_button_search" 
		            android:layout_centerHorizontal="true"
		            android:layout_marginTop="5dp" 
		            android:text="@string/accueil_button_discover"/>
		    <Button 
		            style="@style/boutonNormal"
		            android:id="@+id/accueil_button_stats" 
		            android:layout_below="@+id/accueil_button_discover" 
		            android:layout_centerHorizontal="true"
		            android:layout_marginTop="5dp" 
		            android:text="@string/accueil_button_stats"/>
		    <Button 
		            style="@style/boutonNormal"
		            android:id="@+id/accueil_button_parametre_user" 
		            android:layout_below="@+id/accueil_button_stats" 
		            android:layout_centerHorizontal="true"
		            android:layout_marginTop="5dp" 
		            android:text="@string/accueil_button_parameter_user"/>
		    <Button 
		            style="@style/boutonNormal"
		            android:id="@+id/accueil_button_disconnect" 
		            android:layout_below="@+id/accueil_button_parametre_user" 
		            android:layout_centerHorizontal="true"
		            android:layout_marginTop="5dp" 
		            android:text="@string/accueil_button_disconnect"/>
	    </RelativeLayout>
	    
	</RelativeLayout>	    

