 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     	style="@style/wallpaper"
        android:orientation="vertical"
        android:id="@+id/layout_cinema" 
        android:padding="8dp"
        android:layout_width="fill_parent" 
        android:layout_height="fill_parent"> 
       
		<TextView
		    	android:id="@+id/cinema_cinema" 
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:textSize="26sp"
		        android:textStyle="bold"
		        android:textColor="#FFFFFF"
		        android:text="@string/cinema_cinema" />
	    <Button 
   	        	style="@style/boutonNormal"
   	        	android:layout_marginTop="5dp"
	            android:id="@+id/cinema_button_coming_soon" 
	            android:layout_below="@+id/cinema_cinema" 
	            android:layout_centerHorizontal="true" 
	            android:text="@string/cinema_button_coming_soon"/>
	    
	    <Button 
	            style="@style/boutonNormal"
	            android:id="@+id/cinema_button_closest_cinema" 
	            android:layout_below="@+id/cinema_button_coming_soon" 
	            android:layout_centerHorizontal="true" 
	            android:text="@string/cinema_button_closest_cinema"/>

	    <Button 
	        	style="@style/boutonNormal"
	            android:id="@+id/cinema_button_all_cinemas" 
	            android:layout_below="@+id/cinema_button_closest_cinema" 
	            android:layout_centerHorizontal="true" 
	            android:text="@string/cinema_button_all_cinemas"/>
	    
	</RelativeLayout>	    