<?xml version="1.0"?>
<RelativeLayout 
    android:layout_height="fill_parent" 
    android:layout_width="fill_parent" 
    android:id="@+id/linear_layout_selection" 
    style="@style/wallpaper"
    android:orientation="vertical" 
    android:padding="8dp"
    xmlns:android="http://schemas.android.com/apk/res/android">

	<TextView 
	    android:layout_height="wrap_content" 
	    android:layout_width="wrap_content" 
	    android:id="@+id/channel_channelT" 
	    android:textSize="26sp"
	    android:textColor="@color/white"
	    android:text="@string/channel_Text" 
	    android:textStyle="bold"/>

	<Button 
	    android:id="@+id/channel_button_coming_soon" 
	    android:text="@string/channel_button_coming_soon" 
	    android:layout_marginTop="5dp"
	    android:layout_centerHorizontal="true" 
	    android:layout_below="@+id/channel_channelT"
	    style="@style/boutonNormal"/>

	<Button 
	    android:id="@+id/channel_button_all_cinemas" 
	    android:text="@string/channel_button_cinema" 
	    android:layout_centerHorizontal="true" 
	    android:layout_below="@+id/channel_button_coming_soon"
	    style="@style/boutonNormal"/>

</RelativeLayout>